--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DeepL Translator App</string>
-    <string name="action_settings">Settings</string>
+    <string name="no_text">No text specified</string>
+    <string name="searching_translation">Searching translation...</string>
+    <string name="text_to_translate">Text to translate</string>
 </resources>
