--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">DeepL Translator App</string>
     <string name="no_text">No text specified</string>
+    <string name="no_internet">No internet connection</string>
     <string name="searching_translation">Searching translation...</string>
     <string name="text_to_translate">Text to translate</string>
+    <string name="read_result">Read result</string>
+    <string name="tts_not_available">Text-to-Speech is not available on your device.</string>
+    <string name="tts_language_not_available">Text-to-Speech is not available for this language.</string>
+    <string name="entry_deleted">Entry deleted!</string>
+    <string name="undo">Undo</string>
 </resources>
